force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Other_Legacy_Equipment__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Legacy_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>