force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Other_Legacy_Equipment_Activity_i_e_G__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Legacy_Equipment_Activity_i_e_G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Legacy Equipment Activity, i.e., G</label>
    <type>Checkbox</type>
</CustomField>