force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Other_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Special_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Preapproved Other Brand Request</label>
    <type>Checkbox</type>
</CustomField>