force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Outlet_Contact_Phone_store__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_Phone_store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlet Contact Phone(store)</label>
    <type>Checkbox</type>
</CustomField>