force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Outlet_Contact_title__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Contact_title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlet Contact title</label>
    <type>Checkbox</type>
</CustomField>