force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Outlet_Store__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlet/Store #</label>
    <type>Checkbox</type>
</CustomField>