force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_percnt_of_volume_going_thru_Freestyle__c.field-meta.xml
<CustomField>
    <fullName>FS_percnt_of_volume_going_thru_Freestyle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>% of volume going thru Freestyle</label>
    <type>Checkbox</type>
</CustomField>