force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Pibb_or_Dr_Pepper__c.field-meta.xml
<CustomField>
    <fullName>FS_Pibb_or_Dr_Pepper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Spicy Cherry Option</label>
    <type>Checkbox</type>
</CustomField>