force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Provide_Mfg_7K_Top_Mounted_Ice_Maker__c.field-meta.xml
<CustomField>
    <fullName>FS_Provide_Mfg_7K_Top_Mounted_Ice_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide Mfg. of Top Mounted Ice Maker</label>
    <type>Checkbox</type>
</CustomField>