force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Provide_Model_7000S_TopMount_IceMakr__c.field-meta.xml
<CustomField>
    <fullName>FS_Provide_Model_7000S_TopMount_IceMakr__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IM Model</label>
    <type>Checkbox</type>
</CustomField>