force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Pumps__c.field-meta.xml
<CustomField>
    <fullName>FS_Pumps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pumps</label>
    <type>Checkbox</type>
</CustomField>