force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_RemoveAllFTNLegacyServeDispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_RemoveAllFTNLegacyServeDispensers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove All FTN(Legacy) Serve Dispensers?</label>
    <type>Checkbox</type>
</CustomField>