force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Requested_Install_Period__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Install_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Install Period</label>
    <type>Checkbox</type>
</CustomField>