force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Requested_Order_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Order_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Order Method</label>
    <type>Checkbox</type>
</CustomField>