force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_SA_Contact_Preferred_Mode_Communi__c.field-meta.xml
<CustomField>
    <fullName>FS_SA_Contact_Preferred_Mode_Communi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA Contact Preferred Mode Communication</label>
    <type>Checkbox</type>
</CustomField>