force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Scndry_Site_Assmnt_Cnct_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Scndry_Site_Assmnt_Cnct_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Site Assessment Contact name</label>
    <type>Checkbox</type>
</CustomField>