force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Sec_Site_Assessment_Cnct_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Sec_Site_Assessment_Cnct_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Site Assessment Contact Title</label>
    <type>Checkbox</type>
</CustomField>