force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Secondary_Contractor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Secondary_Contractor_Contact_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Contractor Contact Phone #</label>
    <type>Checkbox</type>
</CustomField>