force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Select_designation_for_OB_Packet__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_designation_for_OB_Packet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select designation for OB Packet?</label>
    <type>Checkbox</type>
</CustomField>