force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Select_On_Boarding_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Select_On_Boarding_Start_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select On-Boarding - Start Time</label>
    <type>Checkbox</type>
</CustomField>