force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_Serve_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Ice_Fill_Requirements__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Indicate Ice Fill Method</label>
    <type>Checkbox</type>
</CustomField>