force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_Serve_Top_Mount_Ice_maker_Mdl_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Top_Mount_Ice_maker_Mdl_no__c</fullName>
    <defaultValue>true</defaultValue>
    <label>9000 Series Top-Mount Ice-maker Model no</label>
    <type>Checkbox</type>
</CustomField>