force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_Serve_Top_Mount_Ice_maker_MFG__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Top_Mount_Ice_maker_MFG__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Provide Mfg. of Top Mounted Ice Maker</label>
    <type>Checkbox</type>
</CustomField>