force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_Serve_Type_of_Ice__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Serve_Type_of_Ice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>9000 Series Type of Ice</label>
    <type>Checkbox</type>
</CustomField>