force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_serve_volume__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_serve_volume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>9000 Series volume</label>
    <type>Checkbox</type>
</CustomField>