force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Self_Srv_Top_Mnt_Ice_maker_Mdl_no__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IM Model</label>
    <type>Checkbox</type>
</CustomField>