force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Ship_Conf_Same_as_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Ship_Conf_Same_as_Admin_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship Conf. Same as Admin Contact</label>
    <type>Checkbox</type>
</CustomField>