force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Ship_to_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Ship_to_Contact_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship-to Contact Name</label>
    <type>Checkbox</type>
</CustomField>