force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Site_Assessment_Contact_Cell__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_Contact_Cell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Assessment Contact Phone(Alternate)</label>
    <type>Checkbox</type>
</CustomField>