force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Site_Assessment_contact_email__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_contact_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Assessment contact email</label>
    <type>Checkbox</type>
</CustomField>