force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Site_Assessment_Required__c.field-meta.xml
<CustomField>
    <fullName>FS_Site_Assessment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Site Assessment Requirements</label>
    <type>Checkbox</type>
</CustomField>