force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Standard_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Email Address</label>
    <type>Checkbox</type>
</CustomField>