force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Standard_User_Function__c.field-meta.xml
<CustomField>
    <fullName>FS_Standard_User_Function__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard User Function</label>
    <type>Checkbox</type>
</CustomField>