force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Store_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Type</label>
    <type>Checkbox</type>
</CustomField>