force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_SwitchingFromCompetitorToCocaCola__c.field-meta.xml
<CustomField>
    <fullName>FS_SwitchingFromCompetitorToCocaCola__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switching from competitor to Coca-Cola</label>
    <type>Checkbox</type>
</CustomField>