force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Team_co_req_Ice_maker_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Team_co_req_Ice_maker_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team co. req. Ice maker Installation?</label>
    <type>Checkbox</type>
</CustomField>