force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>8000</fullName>
            </value>
            <value>
                <fullName>9000</fullName>
            </value>
            <value>
                <fullName>8K9K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>