force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Top_off_feature_on_for_carbnated_prod__c.field-meta.xml
<CustomField>
    <fullName>FS_Top_off_feature_on_for_carbnated_prod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top-off feature on for carbonated prod?</label>
    <type>Checkbox</type>
</CustomField>