force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Total_Prior_year_VPO_w_DP_DDP__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Prior_year_VPO_w_DP_DDP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Prior year VPO w/DP-DDP</label>
    <type>Checkbox</type>
</CustomField>