force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_VMS_All_Ftn_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_VMS_All_Ftn_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMS All Ftn Removed?</label>
    <type>Checkbox</type>
</CustomField>