force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_VMS_Distributor_Name_City_ST__c.field-meta.xml
<CustomField>
    <fullName>FS_VMS_Distributor_Name_City_ST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMS Distributor Name/City/ST</label>
    <type>Checkbox</type>
</CustomField>