force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_VMS_Sub_Trade_Chanel__c.field-meta.xml
<CustomField>
    <fullName>FS_VMS_Sub_Trade_Chanel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VMS Sub-Trade Chanel</label>
    <type>Checkbox</type>
</CustomField>