force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Button_9000_Series__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Button_9000_Series__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Select Water Button Option(9000 Series)</label>
    <type>Checkbox</type>
</CustomField>