force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Button__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Water Button Option(8000 Series)</label>
    <type>Checkbox</type>
</CustomField>