force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Filter_Contact_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Contact_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Filter Contact Contact</label>
    <type>Checkbox</type>
</CustomField>