force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Filter_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Contact_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Filter Outlet Contact Name</label>
    <type>Checkbox</type>
</CustomField>