force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Filter_Model_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Model_no__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide Water Filter Model#</label>
    <type>Checkbox</type>
</CustomField>