force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Water_Filter_Supplier_9000__c.field-meta.xml
<CustomField>
    <fullName>FS_Water_Filter_Supplier_9000__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Water Filter Supplier (9000 Series)</label>
    <type>Checkbox</type>
</CustomField>