force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_What_is_ice_fill_policy_ie_how_much__c.field-meta.xml
<CustomField>
    <fullName>FS_What_is_ice_fill_policy_ie_how_much__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What is ice fill policy, i.e., how much</label>
    <type>Checkbox</type>
</CustomField>