force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Who_will_coordinate_Ice_maker_Install__c.field-meta.xml
<CustomField>
    <fullName>FS_Who_will_coordinate_Ice_maker_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Who will coordinate Ice maker Install</label>
    <type>Checkbox</type>
</CustomField>