force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Who_will_install_Water_Filter__c.field-meta.xml
<CustomField>
    <fullName>FS_Who_will_install_Water_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Filter Installer</label>
    <type>Checkbox</type>
</CustomField>