force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_WhoWillPerformRequiredIceMakerWork__c.field-meta.xml
<CustomField>
    <fullName>FS_WhoWillPerformRequiredIceMakerWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IM Installer</label>
    <type>Checkbox</type>
</CustomField>