force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Will_Freestyle_backroom_be_Same_Local__c.field-meta.xml
<CustomField>
    <fullName>FS_Will_Freestyle_backroom_be_Same_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Freestyle backroom be Same Local</label>
    <type>Checkbox</type>
</CustomField>