force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Will_Freestyle_units_be_same_local__c.field-meta.xml
<CustomField>
    <fullName>FS_Will_Freestyle_units_be_same_local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Freestyle unit(s) be same local</label>
    <type>Checkbox</type>
</CustomField>