force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_WillDavacoCoordinateSiteAssessment__c.field-meta.xml
<CustomField>
    <fullName>FS_WillDavacoCoordinateSiteAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Davaco coordinate Site Assessment?</label>
    <type>Checkbox</type>
</CustomField>