force-app/main/default/objects/FS_Customer_Input_Type__c/fields/Water_Filter_Installer_Email__c.field-meta.xml
<CustomField>
    <fullName>Water_Filter_Installer_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Filter Installer Contact Email</label>
    <type>Checkbox</type>
</CustomField>